Fix margin on mobile

--- a/src/components/Footer/NewsletterCTA.css
+++ b/src/components/Footer/NewsletterCTA.css
@@ -46,13 +46,14 @@
 
   .newsletter-cta .cta-subscribe-input {
     width: 416px;
-    margin-bottom: var(--space-4x);
+    margin-bottom: var(--space-0x);
   }
 }
 .newsletter-cta .cta-subscribe-input {
   width: 100%;
   height: 56px;
   max-height: 56px;
+  margin-bottom: var(--space-4x);
   padding-right: 24px;
   padding-left: 24px;
   border-style: solid;
